fix: purchase core functionality